CS59_Intellij/tests/invalid_syntax/noloopend.dsl
/* invalid: loop not terminated */
Begin Loop,
Repeat 10 Times:
    Generate mail.
    Increment i.